updated Maven test code